[package]
name = "formal-engine-open"
version = "0.1.0"
edition = "2021"

[dependencies]
z3 = "0.12.1"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
aes = "0.8.4"
block-modes = "0.9.1"
rand = "0.8"

[dev-dependencies]
tempfile = "3.27.0"
